chore: :heavy_plus_sign: Prettier and Eslint

--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon --inspect server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "eslint": "^8.31.0",
+    "nodemon": "^2.0.20",
+    "prettier": "2.8.1"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
