--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier": "2.8.1"
   },
   "dependencies": {
+    "async-middleware": "^1.2.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.2"
